WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31301
[V8] Fix crash in V8CustomXPathNSResolver (
http://crbug.com/26726
).
https://bugs.webkit.org/show_bug.cgi?id=31301
Summary
[V8] Fix crash in V8CustomXPathNSResolver (http://crbug.com/26726).
Vitaly Repeshko
Reported
2009-11-10 09:24:47 PST
[V8] Fix crash in V8CustomXPathNSResolver (
http://crbug.com/26726
).
Attachments
patch:layout test and fix
(8.97 KB, patch)
2009-11-10 10:19 PST
,
Vitaly Repeshko
dglazkov
: review+
Details
Formatted Diff
Diff
patch: layout test and fix v2
(8.98 KB, patch)
2009-11-10 10:30 PST
,
Vitaly Repeshko
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vitaly Repeshko
Comment 1
2009-11-10 10:19:47 PST
Created
attachment 42874
[details]
patch:layout test and fix
Dimitri Glazkov (Google)
Comment 2
2009-11-10 10:26:05 PST
Comment on
attachment 42874
[details]
patch:layout test and fix
> // XPath-related utilities > - static RefPtr<XPathNSResolver> getXPathNSResolver(v8::Handle<v8::Value> value) > + static RefPtr<XPathNSResolver> getXPathNSResolver(v8::Handle<v8::Value> value, V8Proxy* proxy=0)
proxy = 0 otherwise, r=me.
Vitaly Repeshko
Comment 3
2009-11-10 10:30:19 PST
Created
attachment 42875
[details]
patch: layout test and fix v2
Vitaly Repeshko
Comment 4
2009-11-10 10:30:36 PST
(In reply to
comment #2
)
> (From update of
attachment 42874
[details]
) > > // XPath-related utilities > > - static RefPtr<XPathNSResolver> getXPathNSResolver(v8::Handle<v8::Value> value) > > + static RefPtr<XPathNSResolver> getXPathNSResolver(v8::Handle<v8::Value> value, V8Proxy* proxy=0) > > proxy = 0 > > otherwise, r=me.
Done. Thanks.
Dimitri Glazkov (Google)
Comment 5
2009-11-10 10:34:29 PST
Comment on
attachment 42875
[details]
patch: layout test and fix v2 r=me. Hope the test expectations aren't generated on Chromium, like the last time ;)
WebKit Commit Bot
Comment 6
2009-11-10 10:41:28 PST
Comment on
attachment 42875
[details]
patch: layout test and fix v2 Rejecting patch 42875 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11584 test cases. http/tests/security/mixedContent/redirect-https-to-http-script-in-iframe.html -> failed Exiting early after 1 failures. 9001 tests run. 251.94s total testing time 9000 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 5 test cases (<1%) had stderr output
Dimitri Glazkov (Google)
Comment 7
2009-11-10 10:50:17 PST
Comment on
attachment 42875
[details]
patch: layout test and fix v2 spin again.
Eric Seidel (no email)
Comment 8
2009-11-10 10:57:08 PST
I've filed
bug 31305
about the failure. You should feel encouraged to file bugs about mysterious cq failures if you ever see them.
WebKit Commit Bot
Comment 9
2009-11-10 11:29:47 PST
Comment on
attachment 42875
[details]
patch: layout test and fix v2 Rejecting patch 42875 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11584 test cases. http/tests/security/mixedContent/redirect-https-to-http-script-in-iframe.html -> failed Exiting early after 1 failures. 9001 tests run. 246.13s total testing time 9000 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 5 test cases (<1%) had stderr output
WebKit Commit Bot
Comment 10
2009-11-10 18:15:27 PST
Comment on
attachment 42875
[details]
patch: layout test and fix v2 Clearing flags on attachment: 42875 Committed
r50785
: <
http://trac.webkit.org/changeset/50785
>
WebKit Commit Bot
Comment 11
2009-11-10 18:15:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug