2009-11-10  Vitaly Repeshko  <vitalyr@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Fix crash in V8CustomXPathNSResolver (http://crbug.com/26726).
        https://bugs.webkit.org/show_bug.cgi?id=31301

        * fast/xpath/xpath-detached-iframe-resolver-crash-expected.txt: Added.
        * fast/xpath/xpath-detached-iframe-resolver-crash.html: Added.
2009-11-10  Vitaly Repeshko  <vitalyr@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Fix crash in V8CustomXPathNSResolver (http://crbug.com/26726).
        https://bugs.webkit.org/show_bug.cgi?id=31301

        Tested by new fast/xpath/xpath-detached-iframe-resolver-crash.html.

        Allowed passing V8Proxy for the calling JS context:
        * bindings/v8/V8DOMWrapper.h:
        (WebCore::V8DOMWrapper::getXPathNSResolver):
        * bindings/v8/custom/V8CustomXPathNSResolver.cpp:
        (WebCore::V8CustomXPathNSResolver::create):
        (WebCore::V8CustomXPathNSResolver::V8CustomXPathNSResolver):
        (WebCore::V8CustomXPathNSResolver::lookupNamespaceURI):
        * bindings/v8/custom/V8CustomXPathNSResolver.h:
        * bindings/v8/custom/V8DocumentCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

Canonical link: https://commits.webkit.org/42214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50785 268f45cc-cd09-0410-ab3c-d52691b4dbfc